--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+    <div class="container">
     <h1>Jogo da Adivinhação</h1>
     <p>Tente adivinhar o numero secreto entre 1 e 100!</p>
 
@@ -15,6 +16,7 @@
 
     <p id="mensagem"></p>
     <p id="tentativas"></p>
+    </div>
 
     <script src="script.js"></script>
 </body>
